# culture_its_ok_1

./: .flake8  .gitignore  README.md  TeamREADME.md  bash.exe.stackdump  main.py  pyproject.toml  try.py  Инструкцию по использованию административной панели в браузере.docx  Инструкция по использованию административной панели и созданию отчетов в боте.docx
.github/workflows/: culture_workflows.yml  dev_workflows.yml  prod_workflows.yml  workflows.yml
admin-panel/: .dockerignore  Dockerfile  docker-entrypoint.sh  manage.py  pyproject.toml  uwsgi.ini
admin-panel/config/: asgi.py  settings.py  urls.py  wsgi.py
admin-panel/culture/: admin.py  apps.py  forms.py  models.py  urls.py  utils.py  views.py
admin-panel/culture/migrations/: 0001_initial.py  0002_change_int_to_bigint_for_user.py  0003_add_quiz.py
admin-panel/culture/templates/: survey.html  thankyou.html
bot/: .dockerignore  .env.example  .gitignore  Dockerfile  docker-entrypoint.sh  dummy_db.py  main.py  pyproject.toml  states.py  test_data.py  utils.py
bot/alembic/: env.py
bot/alembic/versions/: 01_initial_2c68d3b5850e_.py  02_add_survey_table_8d35eda3e51c_.py
bot/core/: config.py  exceptions.py  logger.py  middleware.py  quiz.py  states.py  storage.py  utils.py
bot/db/: dummy.py  postgres.py
bot/db/crud/: __init__.py  base.py  object.py  progress.py  reflection.py  route.py  stage.py  step.py  survey.py  user.py
bot/handlers/: __init__.py  admin.py  excursion.py  new_user.py  reflection.py  route.py  search.py  selection.py  spam.py  start.py
bot/keyboards/: inline.py  keyboards.py  reply.py
bot/models/: __init__.py  db_base_settings.py  models.py
bot/services/: google_report.py  report.py
core/: __init__.py  config.py  logger.py
culture/culture/: settings.py  urls.py
culture/culture_db/: admin.py  apps.py  models.py
culture/culture_db/migrations/: 0001_initial.py
infra/: docker-compose-dev.yaml  docker-compose-postgres.yaml  docker-compose.yaml  dump.json
infra/data/: dump.json  routes.json
infra/env.client/: .bot  .django  .general  .google  .sentry
infra/env.example/: .bot  .django  .general  .google  .postgres  .sentry
infra/nginx/: default.conf.template  nginx.conf  site.conf.template
models/: base.py  user.py
services/: google_report.py
