[tool.poetry]
name = "Linters for guide bot"
description = ""
version = "0.1.0"
authors = ["dcomrad", "danlaryushin", "GUSICATC", "SergeychUK92", "STI-xa", "94R1K"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.3"
isort = "^5.12.0"
flake8 = "^6.1.0"
flake8-blind-except = "^0.2.1"
flake8-broken-line = "^1.0.0"
flake8-return = "^1.2.0"
flake8-variables-names = "^0.0.6"
pep8-naming = "^0.13.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
