[tool.poetry]
name = "Guide bot"
description = "Бот для арт-медитации по объектам уличного искусства в Ростове-на-Дону"
version = "0.1.0"
authors = ["dcomrad", "danlaryushin", "GUSICATC", "SergeychUK92", "STI-xa", "94R1K"]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "2.1.1"
pydantic-settings = "^2.0.3"
aiogram = "3.0.0rc1"
alembic = "^1.11.3"
asyncpg = "^0.28.0"
aiosqlite = "^0.19.0"

[tool.poetry.group.dev.dependencies]
python = "^3.10"
isort = "^5.12.0"
pre-commit = "^3.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
